src/test/ui/consts/const-eval/transmute-const-promotion.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/transmute-const-promotion.rs:6:37
   |
LL |     let x: &'static u32 = unsafe { &mem::transmute(3.0f32) };
   |                                     ^^^^^^^^^^^^^^^^^^^^^^ temporary value does not live long enough
LL |
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
